--- a/windows/About.xaml
+++ b/windows/About.xaml
@@ -22,7 +22,7 @@
 				<TextBlock d:LayoutOverrides="Height" FontSize="14" Margin="0,22,0,78" FontFamily="Segoe UI"  Foreground="#FFFFFFFF" Text="x264, x262, XviD, MPEG4, MPEG2, MPEG1, FLV1, MJPEG, HUFF, FFV1, DV" TextWrapping="Wrap" />
 				<TextBlock d:LayoutOverrides="Height" FontSize="14" Margin="0,38.4,0,61.6" FontFamily="Segoe UI"  Foreground="#FFFFFFFF" Text="MP2, MP3, AC3, AAC, ALAC, FLAC, PCM" TextWrapping="Wrap" />
                 <TextBlock FontSize="14" Margin="0,70.8,301.4,31.6" Foreground="#FFFFFFFF" Text="Output containers:" TextWrapping="Wrap" x:Name="text_export" />
-				<TextBlock Margin="0,89.6,0,12" FontSize="14" Foreground="#FFFFFFFF" Text="MKV, AVI, MP4, MOV, 3GP, MPG, FLV, TS, M2TS, PMP, DPG" TextWrapping="Wrap" />
+				<TextBlock Margin="0,89.6,0,12" FontSize="14" Foreground="#FFFFFFFF" Text="MKV, AVI, MP4, MOV, 3GP, MPG, FLV, TS, M2TS, DPG" TextWrapping="Wrap" />
             </Grid>
 			<Image Margin="8,12,0,0" Source="..\pictures\main_logo_134.png" Stretch="None" VerticalAlignment="Top" HorizontalAlignment="Left"/>
             <TextBlock d:LayoutOverrides="Width, Height" Margin="126,4,0,0" FontFamily="Segoe UI" FontSize="23" FontWeight="Normal" Foreground="Honeydew" Text="Version info here" HorizontalAlignment="Center" x:Name="text_version" Height="Auto" VerticalAlignment="Top" />
