--- a/windows/MainWindow.xaml
+++ b/windows/MainWindow.xaml
@@ -382,7 +382,7 @@
                             <Image x:Name="folder_tsmuxer" Source="..\pictures\folder.png" Stretch="Fill" Width="15" Height="14" Margin="0,0,0,4" MouseLeftButtonUp="open_tools_Click" IsHitTestVisible="True"/>
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem x:Name="menu_mkvextract" Header="MKVExtract" Click="mn_apps_Click">
+                    <MenuItem x:Name="menu_mkvextract" Header="gMKVExtractGUI" Click="mn_apps_Click">
                         <MenuItem.Icon>
                             <Image x:Name="folder_mkvextract" Source="..\pictures\folder.png" Stretch="Fill" Width="15" Height="14" Margin="0,0,0,4" MouseLeftButtonUp="open_tools_Click" IsHitTestVisible="True"/>
                         </MenuItem.Icon>
